# media-agent

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  test_pipeline.py
.github/workflows/: ci.yml
agent/: core.py  prompts.py
agent/tools/: confidence.py  llm.py  logger.py  media_type.py  metadata.py  parser.py  plex_refresh.py  renamer.py  scanner.py  subtitles.py
tests/e2e/: test_pipeline.py
tests/integration/: test_tmdb.py
tests/unit/: test_confidence.py  test_llm.py  test_media_type.py  test_parser.py  test_plex_refresh.py  test_renamer.py  test_scanner.py
