[project]
name = "media-agent"
version = "0.1.0"
description = "AI-powered media file renaming agent for Plex"
requires-python = ">=3.12"
dependencies = [
    "langchain-groq>=0.2.0",
    "groq>=0.37.0",
    "requests>=2.33.0",
    "python-dotenv>=1.2.0",
    "thefuzz>=0.22.0",
    "python-Levenshtein>=0.27.0",
    "plexapi>=4.18.0",
]

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]